<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normal_background"
    android:orientation="vertical"
    app:layout_anchorGravity="center_horizontal"
    tools:context=".Registration">

    <TextView
        android:id="@+id/registration_form"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/registration_form"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fill_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/fill_out_the_form_carefully"
        android:textAlignment="center"
        android:textColor="#1E46FB"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="287dp" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:background="#B2B7E1"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text|textCapCharacters"
        android:padding="20dp"
        android:textColor="#E6090909"
        android:textColorHint="#D7FEFEFE" />

    <EditText
        android:id="@+id/fatherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#B2B7E1"
        android:ems="10"
        android:hint="@string/father_name"
        android:inputType="text|textCapCharacters"
        android:padding="20dp"
        android:textColor="#E6090909"
        android:textColorHint="#D7FEFEFE" />

    <EditText
        android:id="@+id/motherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#B2B7E1"
        android:ems="10"
        android:hint="@string/mother_name"
        android:inputType="text|textCapCharacters"
        android:padding="20dp"
        android:textColor="#E6090909"
        android:textColorHint="#D7FEFEFE" />

  <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#B2B7E1"
        android:focusable="false"
        android:hint="@string/date_of_birth"
        android:inputType="none"
        android:padding="20dp"
        android:textColor="#E6090909"
        android:textColorHint="#D7FEFEFE"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/placeOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#B2B7E1"
        android:ems="10"
        android:hint="@string/place_of_birth"
        android:inputType="text|textCapCharacters"
        android:padding="20dp"
        android:textColor="#E6090909"
        android:textColorHint="#D7FEFEFE"
        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/cdcNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#B2B7E1"
        android:ems="10"
        android:hint="@string/cdc_number"
        android:inputType="text|textCapCharacters"
        android:padding="20dp"
        android:textColor="#E6090909"
        android:textColorHint="#D7FEFEFE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_gravity="left"
            android:text="@string/back" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="right"
            android:text="@string/next" />
    </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>