<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/registration_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/registration_form"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fill_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/fill_out_the_form_carefully"
        android:textAlignment="center"
        android:textColor="#1E46FB"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="#B2B7E1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="#E6090909"
        android:textColorHint="#D7FEFEFE"
        />

    <EditText
        android:id="@+id/retype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#B2B7E1"
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="#E6090909"
        android:textColorHint="#D7FEFEFE" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_gravity="left"
            android:text="@string/back" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="right"
            android:text="@string/next" />
    </LinearLayout></LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>