<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
  >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/BD_ACT"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="170dp"
        android:text="@string/bd_act"
        android:textColor="#1E46FB"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bangladesh_ancillary_course_training"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
       />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="20dp"
        android:background="#B2B7E1"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="#E6090909"
        android:textColorHint="#D7FEFEFE" />

    <EditText
        android:id="@+id/passwordbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#B2B7E1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="#E6090909"
        android:textColorHint="#D7FEFEFE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="left"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="right"
          android:text="Login"
            />
    </LinearLayout>
</LinearLayout></androidx.constraintlayout.widget.ConstraintLayout>