<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/livepic"
    android:orientation="vertical">

    <TextView
        android:id="@+id/registration_form"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/registration_form"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fill_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/fill_out_the_form_carefully"
        android:textAlignment="center"
        android:textColor="#1E46FB"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/img"
        android:layout_marginTop="40dp"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnlivepic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Take Live Photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_gravity="left"
            android:gravity="center"
            android:text="@string/back" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>