<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/open_background"
    tools:context=".Open_page"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="286dp"
            android:layout_height="262dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/app_logo"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="5dp" />

        <TextView
            android:id="@+id/BD_ACT"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bd_act"
            android:textColor="#1E46FB"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="242dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/bangladesh_ancillary_course_training"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="287dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:background="#DBDDEF"
            android:text="@string/login"
            android:translationY="50dp"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="489dp"
            />

        <Button
            android:id="@+id/newRegistration"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#B1B6E0"
            android:text="@string/new_registration"
            android:translationY="30dp"
            android:ems="10"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="570dp" />


    </LinearLayout>